--- a/emacs.org
+++ b/emacs.org
@@ -262,16 +262,16 @@ $HOME/bin
 
 (use-package sbt-mode)
 
-;; (use-package ensime
-;;   :pin melpa-stable
-;;   :config (progn (setq ensime-use-helm t)
-;;                  (add-hook 'scala-mode-hook 'ensime-scala-mode-hook)
-;;                  (advice-add 'ensime-sbt-test-dwim
-;;                              :around '(lambda (original-function &rest args)
-;;                                         (let* ((original-command (car args))
-;;                                                (only-zzz-str (if current-prefix-arg " -- ex zzz " ""))
-;;                                                (command (concat original-command only-zzz-str)))
-;;                                           (apply original-function (cons command (cdr args))))))))
+(use-package ensime
+  :pin melpa-stable
+  :config (progn (setq ensime-use-helm t)
+                 (add-hook 'scala-mode-hook 'ensime-scala-mode-hook)
+                 (advice-add 'ensime-sbt-test-dwim
+                             :around '(lambda (original-function &rest args)
+                                        (let* ((original-command (car args))
+                                               (only-zzz-str (if current-prefix-arg " -- ex zzz " ""))
+                                               (command (concat original-command only-zzz-str)))
+                                          (apply original-function (cons command (cdr args))))))))
 
 (use-package ruby-mode
   :mode (("Gemfile$" . ruby-mode)
@@ -1058,13 +1058,13 @@ $HOME/bin
                                (plantuml . t)
                                (python . t)
                                (ruby . t)
-                               ;; (scala . t) ;; there are conflicting versions in org & scala-mode requiring ensime
+                               (scala . t) ;; there are conflicting versions in org & scala-mode requiring ensime
                                (scheme . t)
                                (shell . t)
                                (sql . t)))
 #+END_SRC
 
-** scala
+** sbt
 
 #+BEGIN_SRC emacs-lisp
 (defun sbt ()
