--- a/emacs.org
+++ b/emacs.org
@@ -88,8 +88,8 @@ cat init.el
     (set (make-local-variable 'sql-buffer) sqli-buffer)
     (switch-to-buffer sqli-buffer nil t)))
 
-(defun jw--quick-run-cmd-line-process (full-command &optional buffer-name just-toggle-back-if-current-buffer-matches before-buffer-process-creation-hook)
-  "Just a nice wrapper around `make-comint-in-buffer'. If `buffer-name' already exists, this will just switch to it. if `just-toggle-back-if-current-buffer-matches' is `non-nil' then we just switch back to `(other-buffer)'."
+(defun jw--make-cmd-in-buffer (full-command &optional buffer-name just-toggle-back-if-current-buffer-matches before-buffer-process-creation-hook)
+  "A wrapper around `make-comint-in-buffer'. If `buffer-name' already exists, this will just switch to it. if `just-toggle-back-if-current-buffer-matches' is `non-nil' then we just switch back to `(other-buffer)'."
   (if (and just-toggle-back-if-current-buffer-matches buffer-name (string= (buffer-name) buffer-name))
       (switch-to-buffer (other-buffer))
     (if (and buffer-name (get-buffer buffer-name))
@@ -107,12 +107,12 @@ cat init.el
               (apply 'make-comint-in-buffer full-command buffer command-name nil command-args))
           (message "Empty command name! Did nothing."))))))
 
-(defun jw--make-cmd-line-process (&optional command args)
+(defun jw--run-cmd (&optional command args)
   "Inspired by rubbish's `command-line-tool' function but uses eshell's history file and completing-read which helm enriches."
   (let* ((history (reverse (jw--read-file-lines-to-string eshell-history-file-name)))
          (full-command (completing-read "Command: " history nil nil (if command (concat command " " (or args "")) "")))
          (add-command-to-eshell-history #'(lambda () (write-region (concat full-command "\n") nil eshell-history-file-name 'append 1))))
-    (jw--quick-run-cmd-line-process full-command nil nil add-command-to-eshell-history)))
+    (jw--make-cmd-in-buffer full-command nil nil add-command-to-eshell-history)))
 #+END_SRC
 
 ** env
@@ -497,38 +497,7 @@ $HOME/bin
 
 (defun cmd (&optional command args)
   (interactive)
-  (jw--make-cmd-line-process command args))
-
-(defun cmd-ssh (&optional args)
-  (interactive)
-  (jw--make-cmd-line-process "ssh" args))
-
-(defun cmd-brew ()
-  (interactive)
-  (jw--make-cmd-line-process "brew"))
-
-(defun cmd-docker ()
-  (interactive)
-  (jw--make-cmd-line-process "docker"))
-
-(defun increment-number (&optional arg)
-  (interactive "p*")
-  (save-excursion
-    (save-match-data
-      (let (inc-by field-width answer)
-        (setq inc-by (if arg arg 1))
-        (skip-chars-backward "0123456789")
-        (when (re-search-forward "[0-9]+" nil t)
-          (setq field-width (- (match-end 0) (match-beginning 0)))
-          (setq answer (+ (string-to-number (match-string 0) 10) inc-by))
-          (when (< answer 0)
-            (setq answer (+ (expt 10 field-width) answer)))
-          (replace-match (format (concat "%0" (int-to-string field-width) "d")
-                                 answer)))))))
-
-(defun decrement-number (&optional arg)
-  (interactive "p*")
-  (increment-number (if arg (- arg) -1)))
+  (jw--run-cmd command args))
 
 (defun toggle-window-split ()
   (interactive)
@@ -654,7 +623,7 @@ $HOME/bin
 
 (defun emacs-archive-packages ()
   (when (file-exists-p package-user-dir)
-    (let ((archive-dir (format "/tmp/emacs-elpa--%s" (current-time-string))))
+    (let ((archive-dir (format "/tmp/emacs-elpa--%s" (jw--iso-current-time-string))))
       (copy-directory package-user-dir archive-dir)
       (delete-directory package-user-dir t))))
 #+END_SRC
