--- a/emacs.org
+++ b/emacs.org
@@ -914,6 +914,13 @@ $HOME/bin
         (todo))
     (message "Please set `jw-org-todo-file' to your todo org file location!")))
 
+(defun org-feed-update-all-or-one (arg)
+  "When called with a prefix argument, interactively call `org-feed-update'. Otherwise call `org-feed-update-all'."
+  (interactive "P")
+  (if arg
+      (call-interactively 'org-feed-update)
+    (org-feed-update-all)))
+
 (global-set-key (kbd "C-c o") 'toggle-todo)
 (global-set-key (kbd "C-c a") 'org-agenda)
 (global-set-key (kbd "C-c c") 'org-capture)
@@ -921,7 +928,8 @@ $HOME/bin
 
 (add-hook 'org-mode-hook '(lambda ()
                             (local-set-key (kbd "C-c <") 'org-time-stamp)
-                            (local-set-key (kbd "C-c .") 'org-time-stamp-inactive)))
+                            (local-set-key (kbd "C-c .") 'org-time-stamp-inactive)
+                            (local-set-key [remap org-feed-update-all] 'org-feed-update-all-or-one))) ;; C-c C-x g
 
 (add-to-list 'org-structure-template-alist '("n" "#+NAME: ?"))
 (add-to-list 'org-structure-template-alist '("h" "#+HEADER: ?"))
