--- a/emacs.org
+++ b/emacs.org
@@ -663,10 +663,6 @@ My terminal rc file parses these same files.
 #+BEGIN_SRC emacs-lisp
 (global-unset-key (kbd "C-z"))
 (global-unset-key (kbd "C-x C-z"))
-(global-unset-key (kbd "C-x m"))
-(global-unset-key (kbd "C-x m m"))
-
-(global-set-key (kbd "C-c i") 'toggle-scratch-buffer)
 
 (global-set-key (kbd "C-c M-e") 'eshell-cd-vc-root-dir-or-pwd-otherwise-other-buffer)
 
@@ -696,8 +692,23 @@ My terminal rc file parses these same files.
 
 (global-set-key (kbd "C-c M-t") 'transpose-lines)
 
-(global-set-key (kbd "C-x m m") 'sonic-pi-stop-or-play)
 
+
+#+END_SRC
+
+hijack C-x m as prefix key for personal bindings
+#+BEGIN_SRC emacs-lisp
+(setq jw-keymap (make-sparse-keymap))
+
+(global-set-key (kbd "C-x m") jw-keymap)
+(global-set-key (kbd "C-c m") jw-keymap)
+
+(define-key jw-keymap "i" 'toggle-scratch-buffer)
+
+(define-key jw-keymap "D" 'emacs-archive-packages-and-die)
+
+(define-key jw-keymap "M" 'sonic-pi-server)
+(define-key jw-keymap "m" 'sonic-pi-stop-or-play)
 #+END_SRC
 
 ** helm
@@ -832,12 +843,18 @@ My terminal rc file parses these same files.
           '(lambda () (setq rcirc-fill-column (- (window-width) 2))))
 #+END_SRC
 
-*** you should consider a custom nickname in a safe place, e.g. the `private` dir
-
+here are some useful rcirc configs to set in the safe `private` location
 #+BEGIN_SRC emacs-lisp :tangle no
-(setq rcirc-default-nick "your nick"
-      rcirc-default-user-name "your username"
-      rcirc-default-full-name "your full name")
+(setq rcirc-default-nick "nick"
+      rcirc-default-user-name "username"
+      rcirc-default-full-name "full name"
+      rcirc-keywords '("nick1" "nick2")
+      rcirc-server-alist '(("irc.freenode.net"
+                            :port 6697
+                            :encryption tls
+                            :user-name "freenode username"
+                            :password "free node pass"
+                            :channels ("##doctorwho"))))
 #+END_SRC
 
 ** magit
@@ -943,10 +960,10 @@ My terminal rc file parses these same files.
       (call-interactively 'org-feed-update)
     (org-feed-update-all)))
 
-(global-set-key (kbd "C-c o") 'toggle-todo)
-(global-set-key (kbd "C-c a") 'org-agenda)
-(global-set-key (kbd "C-c c") 'org-capture)
-(global-set-key (kbd "C-c C-x <tab>") 'org-pomodoro)
+(define-key jw-keymap "o" 'toggle-todo)
+(define-key jw-keymap "a" 'org-agenda)
+(define-key jw-keymap "c" 'org-capture)
+(define-key jw-keymap (kbd "<tab>") 'org-pomodoro)
 
 (add-hook 'org-mode-hook '(lambda ()
                             (local-set-key (kbd "C-c <") 'org-time-stamp)
