fixing org babel latex to not remove logfiles

--- a/emacs.org
+++ b/emacs.org
@@ -357,6 +357,7 @@ My terminal rc file parses these same files.
 
 (put 'narrow-to-region 'disabled nil)
 
+
 (setq user-auto-save-directory (concat user-emacs-directory "auto-saves/"))
 (unless (file-exists-p user-auto-save-directory) (make-directory user-auto-save-directory)) ;; auto-save won't create directories
 (setq auto-save-file-name-transforms `((".*" ,user-auto-save-directory t)))
@@ -1003,14 +1004,7 @@ here are some useful rcirc configs to set in the safe `private` location
 (add-to-list 'org-structure-template-alist '("S" "#+BEGIN_SRC ?\n\n#+END_SRC"))
 
 (add-to-list 'org-latex-packages-alist '("" "physics"))
-
-(when (executable-find "pygmentize") ;; for syntax highlighting of code inside of org-src blocks for latex
-  (add-to-list 'org-latex-packages-alist '("" "minted"))
-  (setq org-latex-listings 'minted
-        org-latex-minted-options '(("mathescape" "true") ("frame" "leftline") ("framesep" "1em"))
-        org-latex-pdf-process '("pdflatex -shell-escape -interaction nonstopmode -output-directory %o %f" ;; apparently this needs a list
-                                "pdflatex -shell-escape -interaction nonstopmode -output-directory %o %f"
-                                "pdflatex -shell-escape -interaction nonstopmode -output-directory %o %f")))
+(setq org-latex-remove-logfiles nil) ;; evaluating latex blocks was causing errors because ox-latex couldn't find the logfiles
 
 (setq org-use-speed-commands t
       org-enforce-todo-dependencies t
